add minigame beta

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -127,10 +127,11 @@
                             </div>
                         </div>
                     </div>
-
-                    <img src="/images/pixel-char.gif" 
-                         alt="Pixel Character" 
-                         class="pixel-art absolute -top-12 -right-4 lg:-top-20 lg:-right-20 w-24 h-24 lg:w-48 lg:h-48 animate-bounce-slow z-20 drop-shadow-[0_5px_5px_rgba(0,0,0,0.5)]">
+                    <a href="/catloon">
+                        <img src="/images/pixel-char.gif" 
+                            alt="Pixel Character" 
+                            class="pixel-art absolute -top-12 -right-4 lg:-top-20 lg:-right-20 w-24 h-24 lg:w-48 lg:h-48 animate-bounce-slow z-20 drop-shadow-[0_5px_5px_rgba(0,0,0,0.5)]">
+                    </a>
                 </div>
 
             </div>
