--- a/views/catloon.ejs
+++ b/views/catloon.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Catloon - The High Flying Cat</title>
+    <title>Catloon - The High Flying Cat(BETA)</title>
     <link rel="stylesheet" href="/minigame/style.css"> 
 </head>
 <body>
